hw2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    COMMENT
    CPPCOMMENT

Grammar

Rule 0     S' -> pp
Rule 1     pp -> program
Rule 2     program -> MYST
Rule 3     program -> program class_decl
Rule 4     program -> program MYED
Rule 5     program -> program error
Rule 6     class_decl1 -> CLASS ID LBIG
Rule 7     class_decl1 -> CLASS ID EXTENDS ID LBIG
Rule 8     class_decl1 -> error ID EXTENDS ID LBIG
Rule 9     class_decl1 -> error ID LBIG
Rule 10    class_decl1 -> CLASS error EXTENDS ID LBIG
Rule 11    class_decl1 -> CLASS error LBIG
Rule 12    class_decl1 -> CLASS ID error
Rule 13    class_decl1 -> CLASS ID EXTENDS ID error
Rule 14    class_decl2 -> class_decl1 class_body_decl
Rule 15    class_decl2 -> class_decl2 class_body_decl
Rule 16    class_decl -> class_decl2 RBIG
Rule 17    class_body_decl -> field_decl
Rule 18    class_body_decl -> method_decl
Rule 19    class_body_decl -> constructor_decl
Rule 20    field_decl -> modifier var_decl
Rule 21    modifier_first -> PUBLIC
Rule 22    modifier_first -> PRIVATE
Rule 23    modifier_first -> <empty>
Rule 24    modifier -> modifier_first
Rule 25    modifier -> modifier_first STATIC
Rule 26    var_decl -> type variables SEMICOLON
Rule 27    var_decl -> type variables error
Rule 28    type -> INT
Rule 29    type -> FLOAT
Rule 30    type -> BOOLEAN
Rule 31    type -> ID
Rule 32    type -> error
Rule 33    variables -> variable
Rule 34    variables -> variables COMMA variable
Rule 35    variable -> ID
Rule 36    variable -> variable LSQ RSQ
Rule 37    variable -> variable LSQ error
Rule 38    method_decl1 -> modifier type ID LPAREN
Rule 39    method_decl1 -> modifier VOID ID LPAREN
Rule 40    method_decl -> method_decl1 formals RPAREN block
Rule 41    method_decl -> method_decl1 RPAREN block
Rule 42    constructor_decl -> modifier ID LPAREN RPAREN block
Rule 43    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 44    constructor_decl -> modifier ID error RPAREN block
Rule 45    constructor_decl -> modifier ID error formals RPAREN block
Rule 46    formals -> formal_param
Rule 47    formals -> formals COMMA formal_param
Rule 48    formal_param -> type variable
Rule 49    block1 -> LBIG
Rule 50    block1 -> block1 stmt
Rule 51    block -> block1 RBIG
Rule 52    stmt -> noncompleteif_stmt
Rule 53    stmt -> other_stmt
Rule 54    noncompleteif_stmt -> IF LPAREN expr RPAREN stmt
Rule 55    noncompleteif_stmt -> IF LPAREN expr RPAREN other_stmt ELSE noncompleteif_stmt
Rule 56    noncompleteif_stmt -> WHILE LPAREN expr RPAREN noncompleteif_stmt
Rule 57    noncompleteif_stmt -> forbasic noncompleteif_stmt
Rule 58    other_stmt -> IF LPAREN expr RPAREN other_stmt ELSE other_stmt
Rule 59    other_stmt -> WHILE LPAREN expr RPAREN other_stmt
Rule 60    forbasic1 -> FOR LPAREN SEMICOLON
Rule 61    forbasic1 -> FOR LPAREN stmt_expr SEMICOLON
Rule 62    forbasic2 -> forbasic1 SEMICOLON
Rule 63    forbasic2 -> forbasic1 expr SEMICOLON
Rule 64    forbasic -> forbasic2 RPAREN
Rule 65    forbasic -> forbasic2 stmt_expr RPAREN
Rule 66    other_stmt -> forbasic other_stmt
Rule 67    other_stmt -> RETURN SEMICOLON
Rule 68    other_stmt -> RETURN expr SEMICOLON
Rule 69    other_stmt -> RETURN error
Rule 70    other_stmt -> RETURN expr error
Rule 71    other_stmt -> stmt_expr SEMICOLON
Rule 72    other_stmt -> stmt_expr error
Rule 73    other_stmt -> BREAK SEMICOLON
Rule 74    other_stmt -> BREAK error
Rule 75    other_stmt -> CONTINUE SEMICOLON
Rule 76    other_stmt -> CONTINUE error
Rule 77    other_stmt -> block
Rule 78    other_stmt -> var_decl
Rule 79    other_stmt -> SEMICOLON
Rule 80    literal -> INT_CONST
Rule 81    literal -> FLOAT_CONST
Rule 82    literal -> STRING_CONST
Rule 83    literal -> NULL
Rule 84    literal -> TRUE
Rule 85    literal -> FALSE
Rule 86    primary -> literal
Rule 87    primary -> THIS
Rule 88    primary -> SUPER
Rule 89    primary -> LPAREN expr RPAREN
Rule 90    pnew1 -> NEW ID
Rule 91    pnew -> pnew1 LPAREN RPAREN
Rule 92    pnew -> pnew1 LPAREN arguments RPAREN
Rule 93    primary -> pnew
Rule 94    primary -> lhs
Rule 95    primary -> method_invocation
Rule 96    arguments -> expr
Rule 97    arguments -> arguments COMMA expr
Rule 98    lhs -> field_access
Rule 99    lhs -> array_access
Rule 100   field_access -> primary POINT ID
Rule 101   field_access -> ID
Rule 102   array_access -> primary LSQ expr RSQ
Rule 103   method_invocation -> field_access LPAREN RPAREN
Rule 104   method_invocation -> field_access LPAREN arguments RPAREN
Rule 105   expr -> expr PLUS expr
Rule 106   expr -> expr MINUS expr
Rule 107   expr -> expr MULTI expr
Rule 108   expr -> expr DIVIDE expr
Rule 109   expr -> expr AND expr
Rule 110   expr -> expr OR expr
Rule 111   expr -> expr EQUAL expr
Rule 112   expr -> expr NOTEQUAL expr
Rule 113   expr -> expr LESS expr
Rule 114   expr -> expr GREATER expr
Rule 115   expr -> expr LESSEQUAL expr
Rule 116   expr -> expr GREATEREQUAL expr
Rule 117   expr -> primary
Rule 118   expr -> assign
Rule 119   expr -> newarray
Rule 120   expr -> MINUS expr
Rule 121   expr -> PLUS expr
Rule 122   expr -> NOT expr
Rule 123   newarray -> newarrayp
Rule 124   newarray -> newarrayw
Rule 125   newarrayw -> newarrayw LSQ RSQ
Rule 126   newarrayw -> newarrayp LSQ RSQ
Rule 127   newarrayp -> NEW type LSQ expr RSQ
Rule 128   newarrayp -> newarrayp LSQ expr RSQ
Rule 129   assign -> lhs ASSIGN expr
Rule 130   assign -> lhs INCREMENT
Rule 131   assign -> INCREMENT lhs
Rule 132   assign -> lhs DECREMENT
Rule 133   assign -> DECREMENT lhs
Rule 134   stmt_expr -> assign
Rule 135   stmt_expr -> method_invocation
Rule 136   stmt_expr -> error

Terminals, with rules where they appear

AND                  : 109
ASSIGN               : 129
BOOLEAN              : 30
BREAK                : 73 74
CLASS                : 6 7 10 11 12 13
COMMA                : 34 47 97
COMMENT              : 
CONTINUE             : 75 76
CPPCOMMENT           : 
DECREMENT            : 132 133
DIVIDE               : 108
DO                   : 
ELSE                 : 55 58
EQUAL                : 111
EXTENDS              : 7 8 10 13
FALSE                : 85
FLOAT                : 29
FLOAT_CONST          : 81
FOR                  : 60 61
GREATER              : 114
GREATEREQUAL         : 116
ID                   : 6 7 7 8 8 9 10 12 13 13 31 35 38 39 42 43 44 45 90 100 101
IF                   : 54 55 58
INCREMENT            : 130 131
INT                  : 28
INT_CONST            : 80
LBIG                 : 6 7 8 9 10 11 49
LESS                 : 113
LESSEQUAL            : 115
LPAREN               : 38 39 42 43 54 55 56 58 59 60 61 89 91 92 103 104
LSQ                  : 36 37 102 125 126 127 128
MINUS                : 106 120
MULTI                : 107
MYED                 : 4
MYST                 : 2
NEW                  : 90 127
NOT                  : 122
NOTEQUAL             : 112
NULL                 : 83
OR                   : 110
PLUS                 : 105 121
POINT                : 100
PRIVATE              : 22
PUBLIC               : 21
RBIG                 : 16 51
RETURN               : 67 68 69 70
RPAREN               : 40 41 42 43 44 45 54 55 56 58 59 64 65 89 91 92 103 104
RSQ                  : 36 102 125 126 127 128
SEMICOLON            : 26 60 61 62 63 67 68 71 73 75 79
STATIC               : 25
STRING_CONST         : 82
SUPER                : 88
THIS                 : 87
TRUE                 : 84
VOID                 : 39
WHILE                : 56 59
error                : 5 8 9 10 11 12 13 27 32 37 44 45 69 70 72 74 76 136

Nonterminals, with rules where they appear

arguments            : 92 97 104
array_access         : 99
assign               : 118 134
block                : 40 41 42 43 44 45 77
block1               : 50 51
class_body_decl      : 14 15
class_decl           : 3
class_decl1          : 14
class_decl2          : 15 16
constructor_decl     : 19
expr                 : 54 55 56 58 59 63 68 70 89 96 97 102 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 120 121 122 127 128 129
field_access         : 98 103 104
field_decl           : 17
forbasic             : 57 66
forbasic1            : 62 63
forbasic2            : 64 65
formal_param         : 46 47
formals              : 40 43 45 47
lhs                  : 94 129 130 131 132 133
literal              : 86
method_decl          : 18
method_decl1         : 40 41
method_invocation    : 95 135
modifier             : 20 38 39 42 43 44 45
modifier_first       : 24 25
newarray             : 119
newarrayp            : 123 126 128
newarrayw            : 124 125
noncompleteif_stmt   : 52 55 56 57
other_stmt           : 53 55 58 58 59 66
pnew                 : 93
pnew1                : 91 92
pp                   : 0
primary              : 100 102 117
program              : 1 3 4 5
stmt                 : 50 54
stmt_expr            : 61 65 71 72
type                 : 26 27 38 48 127
var_decl             : 20 78
variable             : 33 34 36 37 48
variables            : 26 27 34

Parsing method: LALR

state 0

    (0) S' -> . pp
    (1) pp -> . program
    (2) program -> . MYST
    (3) program -> . program class_decl
    (4) program -> . program MYED
    (5) program -> . program error

    MYST            shift and go to state 2

    pp                             shift and go to state 1
    program                        shift and go to state 3

state 1

    (0) S' -> pp .



state 2

    (2) program -> MYST .

    MYED            reduce using rule 2 (program -> MYST .)
    error           reduce using rule 2 (program -> MYST .)
    CLASS           reduce using rule 2 (program -> MYST .)
    $end            reduce using rule 2 (program -> MYST .)


state 3

    (1) pp -> program .
    (3) program -> program . class_decl
    (4) program -> program . MYED
    (5) program -> program . error
    (16) class_decl -> . class_decl2 RBIG
    (14) class_decl2 -> . class_decl1 class_body_decl
    (15) class_decl2 -> . class_decl2 class_body_decl
    (6) class_decl1 -> . CLASS ID LBIG
    (7) class_decl1 -> . CLASS ID EXTENDS ID LBIG
    (8) class_decl1 -> . error ID EXTENDS ID LBIG
    (9) class_decl1 -> . error ID LBIG
    (10) class_decl1 -> . CLASS error EXTENDS ID LBIG
    (11) class_decl1 -> . CLASS error LBIG
    (12) class_decl1 -> . CLASS ID error
    (13) class_decl1 -> . CLASS ID EXTENDS ID error

    $end            reduce using rule 1 (pp -> program .)
    MYED            shift and go to state 9
    error           shift and go to state 8
    CLASS           shift and go to state 6

    class_decl2                    shift and go to state 4
    class_decl                     shift and go to state 7
    class_decl1                    shift and go to state 5

state 4

    (16) class_decl -> class_decl2 . RBIG
    (15) class_decl2 -> class_decl2 . class_body_decl
    (17) class_body_decl -> . field_decl
    (18) class_body_decl -> . method_decl
    (19) class_body_decl -> . constructor_decl
    (20) field_decl -> . modifier var_decl
    (40) method_decl -> . method_decl1 formals RPAREN block
    (41) method_decl -> . method_decl1 RPAREN block
    (42) constructor_decl -> . modifier ID LPAREN RPAREN block
    (43) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (44) constructor_decl -> . modifier ID error RPAREN block
    (45) constructor_decl -> . modifier ID error formals RPAREN block
    (24) modifier -> . modifier_first
    (25) modifier -> . modifier_first STATIC
    (38) method_decl1 -> . modifier type ID LPAREN
    (39) method_decl1 -> . modifier VOID ID LPAREN
    (21) modifier_first -> . PUBLIC
    (22) modifier_first -> . PRIVATE
    (23) modifier_first -> .

    RBIG            shift and go to state 19
    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 16
    STATIC          reduce using rule 23 (modifier_first -> .)
    ID              reduce using rule 23 (modifier_first -> .)
    VOID            reduce using rule 23 (modifier_first -> .)
    INT             reduce using rule 23 (modifier_first -> .)
    FLOAT           reduce using rule 23 (modifier_first -> .)
    BOOLEAN         reduce using rule 23 (modifier_first -> .)
    error           reduce using rule 23 (modifier_first -> .)

    class_body_decl                shift and go to state 10
    modifier_first                 shift and go to state 11
    field_decl                     shift and go to state 12
    constructor_decl               shift and go to state 13
    method_decl                    shift and go to state 14
    method_decl1                   shift and go to state 15
    modifier                       shift and go to state 18

state 5

    (14) class_decl2 -> class_decl1 . class_body_decl
    (17) class_body_decl -> . field_decl
    (18) class_body_decl -> . method_decl
    (19) class_body_decl -> . constructor_decl
    (20) field_decl -> . modifier var_decl
    (40) method_decl -> . method_decl1 formals RPAREN block
    (41) method_decl -> . method_decl1 RPAREN block
    (42) constructor_decl -> . modifier ID LPAREN RPAREN block
    (43) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (44) constructor_decl -> . modifier ID error RPAREN block
    (45) constructor_decl -> . modifier ID error formals RPAREN block
    (24) modifier -> . modifier_first
    (25) modifier -> . modifier_first STATIC
    (38) method_decl1 -> . modifier type ID LPAREN
    (39) method_decl1 -> . modifier VOID ID LPAREN
    (21) modifier_first -> . PUBLIC
    (22) modifier_first -> . PRIVATE
    (23) modifier_first -> .

    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 16
    STATIC          reduce using rule 23 (modifier_first -> .)
    ID              reduce using rule 23 (modifier_first -> .)
    VOID            reduce using rule 23 (modifier_first -> .)
    INT             reduce using rule 23 (modifier_first -> .)
    FLOAT           reduce using rule 23 (modifier_first -> .)
    BOOLEAN         reduce using rule 23 (modifier_first -> .)
    error           reduce using rule 23 (modifier_first -> .)

    class_body_decl                shift and go to state 20
    modifier_first                 shift and go to state 11
    field_decl                     shift and go to state 12
    constructor_decl               shift and go to state 13
    method_decl                    shift and go to state 14
    method_decl1                   shift and go to state 15
    modifier                       shift and go to state 18

state 6

    (6) class_decl1 -> CLASS . ID LBIG
    (7) class_decl1 -> CLASS . ID EXTENDS ID LBIG
    (10) class_decl1 -> CLASS . error EXTENDS ID LBIG
    (11) class_decl1 -> CLASS . error LBIG
    (12) class_decl1 -> CLASS . ID error
    (13) class_decl1 -> CLASS . ID EXTENDS ID error

    ID              shift and go to state 22
    error           shift and go to state 21


state 7

    (3) program -> program class_decl .
